--- a/Resources/ALC1220/Info.plist
+++ b/Resources/ALC1220/Info.plist
@@ -22,30 +22,6 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>Toleda - Realtek ALC1220, 3 audio ports, repurposed to 5.1: 0 inputs, 3 outputs+front panel+SPDIF/Optical</string>
-				<key>Id</key>
-				<integer>2</integer>
-				<key>Path</key>
-				<string>layout2.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Toleda - Realtek ALC1220, 3 audio ports, native: 2 inputs, 1 output+front panel+SPDIF/Optical</string>
-				<key>Id</key>
-				<integer>3</integer>
-				<key>Path</key>
-				<string>layout3.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Mirone - Realtek ALC1220</string>
-				<key>Id</key>
-				<integer>5</integer>
-				<key>Path</key>
-				<string>layout5.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
 				<string>Mirone - Realtek ALC1220</string>
 				<key>Id</key>
 				<integer>7</integer>
@@ -54,91 +30,11 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>Custom Realtek ALC1220 by truesoldier</string>
-				<key>Id</key>
-				<integer>11</integer>
-				<key>Path</key>
-				<string>layout11.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
 				<string>MacPeet - ALC1220 for Clevo P950HR</string>
 				<key>Id</key>
 				<integer>13</integer>
 				<key>Path</key>
 				<string>layout13.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>fleaplus - ALC1220 for MSI WT75</string>
-				<key>Id</key>
-				<integer>15</integer>
-				<key>Path</key>
-				<string>layout15.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>MacPeet - ALC1220 for Gigabyte Z390</string>
-				<key>Id</key>
-				<integer>16</integer>
-				<key>Path</key>
-				<string>layout16.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>ALC1220 for MSI GE63 Raider RGB 8RF</string>
-				<key>Id</key>
-				<integer>21</integer>
-				<key>Path</key>
-				<string>layout21.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>lostwolf - ALC1220 for Gigabyte Z370-HD3P</string>
-				<key>Id</key>
-				<integer>27</integer>
-				<key>Path</key>
-				<string>layout27.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>MacPeet- ALC1220 for Z390 Aorus Ultra - Output SP/HP Manualmode </string>
-				<key>Id</key>
-				<integer>28</integer>
-				<key>Path</key>
-				<string>layout28.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>MacPeet- ALC1220 for Z390 Aorus Ultra - Output SP/HP SwitchMode</string>
-				<key>Id</key>
-				<integer>29</integer>
-				<key>Path</key>
-				<string>layout29.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>MacPeet- ALC1220 for Z370 AORUS Gaming 7 - Output SP/HP SwitchMode</string>
-				<key>Id</key>
-				<integer>30</integer>
-				<key>Path</key>
-				<string>layout30.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Custom ALC1220 for MSI P65 Creator by CleverCoder</string>
-				<key>Id</key>
-				<integer>34</integer>
-				<key>Path</key>
-				<string>layout34.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>ALC1220 for MiBook 2019 by Dynamix1997</string>
-				<key>Id</key>
-				<integer>99</integer>
-				<key>Path</key>
-				<string>layout99.xml.zlib</string>
 			</dict>
 		</array>
 		<key>Platforms</key>
@@ -153,43 +49,11 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>Toleda - Realtek ALC1220</string>
-				<key>Id</key>
-				<integer>2</integer>
-				<key>Path</key>
-				<string>PlatformsT.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Toleda - Realtek ALC1220</string>
-				<key>Id</key>
-				<integer>3</integer>
-				<key>Path</key>
-				<string>PlatformsT.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Mirone - Realtek ALC1220</string>
-				<key>Id</key>
-				<integer>5</integer>
-				<key>Path</key>
-				<string>PlatformsM.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
 				<string>Mirone - Realtek ALC1220</string>
 				<key>Id</key>
 				<integer>7</integer>
 				<key>Path</key>
 				<string>PlatformsM.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Custom Realtek ALC1220 by truesoldier</string>
-				<key>Id</key>
-				<integer>11</integer>
-				<key>Path</key>
-				<string>Platforms11.xml.zlib</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
@@ -199,78 +63,6 @@
 				<key>Path</key>
 				<string>Platforms13.xml.zlib</string>
 			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>fleaplus - ALC1220 for MSI WT75</string>
-				<key>Id</key>
-				<integer>15</integer>
-				<key>Path</key>
-				<string>Platforms15.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>MacPeet - ALC1220 for Gigabyte Z390</string>
-				<key>Id</key>
-				<integer>16</integer>
-				<key>Path</key>
-				<string>Platforms16.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>ALC1220 for MSI GE63 Raider RGB 8RF</string>
-				<key>Id</key>
-				<integer>21</integer>
-				<key>Path</key>
-				<string>Platforms21.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>lostwolf - ALC1220 for Gigabyte Z370-HD3P</string>
-				<key>Id</key>
-				<integer>27</integer>
-				<key>Path</key>
-				<string>Platforms27.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>MacPeet- ALC1220 for Z390 Aorus Ultra - Output SP/HP Manualmode </string>
-				<key>Id</key>
-				<integer>28</integer>
-				<key>Path</key>
-				<string>Platforms28.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>MacPeet- ALC1220 for Z390 Aorus Ultra - Output SP/HP SwitchMode</string>
-				<key>Id</key>
-				<integer>29</integer>
-				<key>Path</key>
-				<string>Platforms29.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>MacPeet- ALC1220 for Z370 AORUS Gaming 7 - Output SP/HP SwitchMode</string>
-				<key>Id</key>
-				<integer>30</integer>
-				<key>Path</key>
-				<string>Platforms30.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>ALC1220 for MSI P65 Creator</string>
-				<key>Id</key>
-				<integer>34</integer>
-				<key>Path</key>
-				<string>Platforms34.xml.zlib</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>ALC1220 for MiBook 2019</string>
-				<key>Id</key>
-				<integer>99</integer>
-				<key>Path</key>
-				<string>Platforms99.xml.zlib</string>
-			</dict>
 		</array>
 	</dict>
 	<key>Patches</key>
@@ -279,19 +71,25 @@
 			<key>Count</key>
 			<integer>1</integer>
 			<key>Find</key>
-			<data>xgYASIu/aAE=</data>
+			<data>
+			xgYASIu/aAE=
+			</data>
 			<key>MinKernel</key>
 			<integer>18</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>xgYBSIu/aAE=</data>
+			<data>
+			xgYBSIu/aAE=
+			</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>1</integer>
 			<key>Find</key>
-			<data>QcYGAEmLvCQ=</data>
+			<data>
+			QcYGAEmLvCQ=
+			</data>
 			<key>MaxKernel</key>
 			<integer>13</integer>
 			<key>MinKernel</key>
@@ -299,49 +97,65 @@
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>QcYGAUmLvCQ=</data>
+			<data>
+			QcYGAUmLvCQ=
+			</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>1</integer>
 			<key>Find</key>
-			<data>QcYGAEiLu2g=</data>
+			<data>
+			QcYGAEiLu2g=
+			</data>
 			<key>MinKernel</key>
 			<integer>14</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>QcYGAUiLu2g=</data>
+			<data>
+			QcYGAUiLu2g=
+			</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>1</integer>
 			<key>Find</key>
-			<data>QcaGQwEAAAA=</data>
+			<data>
+			QcaGQwEAAAA=
+			</data>
 			<key>MinKernel</key>
 			<integer>12</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>QcaGQwEAAAE=</data>
+			<data>
+			QcaGQwEAAAE=
+			</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>2</integer>
 			<key>Find</key>
-			<data>ixnUEQ==</data>
+			<data>
+			ixnUEQ==
+			</data>
 			<key>MinKernel</key>
 			<integer>15</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>IBLsEA==</data>
+			<data>
+			IBLsEA==
+			</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>2</integer>
 			<key>Find</key>
-			<data>gxnUEQ==</data>
+			<data>
+			gxnUEQ==
+			</data>
 			<key>MaxKernel</key>
 			<integer>15</integer>
 			<key>MinKernel</key>
@@ -349,19 +163,25 @@
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>AAAAAA==</data>
+			<data>
+			AAAAAA==
+			</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>2</integer>
 			<key>Find</key>
-			<data>ihnUEQ==</data>
+			<data>
+			ihnUEQ==
+			</data>
 			<key>MinKernel</key>
 			<integer>16</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>AAAAAA==</data>
+			<data>
+			AAAAAA==
+			</data>
 		</dict>
 	</array>
 	<key>Revisions</key>
