--- a/Resources/ALC1220/Info.plist
+++ b/Resources/ALC1220/Info.plist
@@ -71,25 +71,19 @@
 			<key>Count</key>
 			<integer>1</integer>
 			<key>Find</key>
-			<data>
-			xgYASIu/aAE=
-			</data>
+			<data>xgYASIu/aAE=</data>
 			<key>MinKernel</key>
 			<integer>18</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>
-			xgYBSIu/aAE=
-			</data>
+			<data>xgYBSIu/aAE=</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>1</integer>
 			<key>Find</key>
-			<data>
-			QcYGAEmLvCQ=
-			</data>
+			<data>QcYGAEmLvCQ=</data>
 			<key>MaxKernel</key>
 			<integer>13</integer>
 			<key>MinKernel</key>
@@ -97,65 +91,49 @@
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>
-			QcYGAUmLvCQ=
-			</data>
+			<data>QcYGAUmLvCQ=</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>1</integer>
 			<key>Find</key>
-			<data>
-			QcYGAEiLu2g=
-			</data>
+			<data>QcYGAEiLu2g=</data>
 			<key>MinKernel</key>
 			<integer>14</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>
-			QcYGAUiLu2g=
-			</data>
+			<data>QcYGAUiLu2g=</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>1</integer>
 			<key>Find</key>
-			<data>
-			QcaGQwEAAAA=
-			</data>
+			<data>QcaGQwEAAAA=</data>
 			<key>MinKernel</key>
 			<integer>12</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>
-			QcaGQwEAAAE=
-			</data>
+			<data>QcaGQwEAAAE=</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>2</integer>
 			<key>Find</key>
-			<data>
-			ixnUEQ==
-			</data>
+			<data>ixnUEQ==</data>
 			<key>MinKernel</key>
 			<integer>15</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>
-			IBLsEA==
-			</data>
+			<data>IBLsEA==</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>2</integer>
 			<key>Find</key>
-			<data>
-			gxnUEQ==
-			</data>
+			<data>gxnUEQ==</data>
 			<key>MaxKernel</key>
 			<integer>15</integer>
 			<key>MinKernel</key>
@@ -163,25 +141,19 @@
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>
-			AAAAAA==
-			</data>
+			<data>AAAAAA==</data>
 		</dict>
 		<dict>
 			<key>Count</key>
 			<integer>2</integer>
 			<key>Find</key>
-			<data>
-			ihnUEQ==
-			</data>
+			<data>ihnUEQ==</data>
 			<key>MinKernel</key>
 			<integer>16</integer>
 			<key>Name</key>
 			<string>AppleHDA</string>
 			<key>Replace</key>
-			<data>
-			AAAAAA==
-			</data>
+			<data>AAAAAA==</data>
 		</dict>
 	</array>
 	<key>Revisions</key>
